--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    /*id 'kotlin-kapt'//es necesario para room
+    id 'androidx.navigation.safeargs.kotlin'
+    id 'dagger.hilt.android.plugin'*/
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -30,22 +34,56 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding = true
+        dataBinding = true
+    }
 }
 
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     // Lottie Files
     implementation 'com.airbnb.android:lottie:5.2.0'
-    //Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    //Firebase
+    implementation 'com.google.firebase:firebase-common-ktx:20.2.0'
+    //---
+    implementation("com.tbuonomo:dotsindicator:4.2")
+    //Corutina
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.6'
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    //viewModel
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    implementation 'androidx.fragment:fragment-ktx:1.5.4'
+    //room
+    /*implementation 'androidx.room:room-ktx:2.4.3'
+    implementation 'androidx.room:room-runtime:2.4.3'
+    kapt 'androidx.room:room-compiler:2.4.3'*/
+    //Skeleton
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    //dagger hilt
+    //implementation 'com.google.dagger:hilt-android:2.41'
+    //kapt 'com.google.dagger:hilt-android-compiler:2.41'
+    //FireStore DATABASE
+    implementation 'com.google.firebase:firebase-firestore:24.4.1'
+    //Shimmer
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
+    implementation 'io.github.ShawnLin013:number-picker:2.4.13'
 
 }
