--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.AuditoriaRetail"
         tools:targetApi="31">
         <activity
-            android:name=".Home.Presentation.ActHome"
+            android:name=".Login.presentation.ui.MainLogin"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
@@ -23,6 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
