--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    /*id 'kotlin-kapt'//es necesario para room
+    id 'kotlin-kapt'//es necesario para room
     id 'androidx.navigation.safeargs.kotlin'
-    id 'dagger.hilt.android.plugin'*/
+    id 'dagger.hilt.android.plugin'
     id 'com.google.gms.google-services'
 }
 
@@ -77,8 +77,8 @@ dependencies {
     //Skeleton
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     //dagger hilt
-    //implementation 'com.google.dagger:hilt-android:2.41'
-    //kapt 'com.google.dagger:hilt-android-compiler:2.41'
+    implementation 'com.google.dagger:hilt-android:2.41'
+    kapt 'com.google.dagger:hilt-android-compiler:2.41'
     //FireStore DATABASE
     implementation 'com.google.firebase:firebase-firestore:24.4.1'
     //Shimmer
