--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.AuditoriaRetail"
         tools:targetApi="31">
         <activity
-            android:name=".Login.presentation.ui.MainLogin"
+            android:name=".Login.presentation.ui.NavLoginHost"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
