--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,5 +85,7 @@ dependencies {
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
     implementation 'io.github.ShawnLin013:number-picker:2.4.13'
+    //Datos Biometricos
+    implementation 'androidx.biometric:biometric:1.1.0'
 
 }
