--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -56,12 +55,15 @@ dependencies {
     //Firebase
     implementation 'com.google.firebase:firebase-common-ktx:20.2.0'
     implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     implementation 'com.google.android.gms:play-services-auth:20.4.0'
     implementation 'com.google.firebase:firebase-database:20.1.0'
+    implementation 'com.google.firebase:firebase-firestore:24.4.1'
     //---
     implementation("com.tbuonomo:dotsindicator:4.2")
     //Corutina
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    //Navegation
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     //Retrofit
@@ -75,21 +77,20 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation 'androidx.fragment:fragment-ktx:1.5.4'
     //room
-    /*implementation 'androidx.room:room-ktx:2.4.3'
+    implementation 'androidx.room:room-ktx:2.4.3'
     implementation 'androidx.room:room-runtime:2.4.3'
-    kapt 'androidx.room:room-compiler:2.4.3'*/
+    kapt 'androidx.room:room-compiler:2.4.3'
     //Skeleton
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     //dagger hilt
-    implementation 'com.google.dagger:hilt-android:2.41'
-    kapt 'com.google.dagger:hilt-android-compiler:2.41'
-    //FireStore DATABASE
-    implementation 'com.google.firebase:firebase-firestore:24.4.1'
+    implementation 'com.google.dagger:hilt-android:2.45'
+    kapt 'com.google.dagger:hilt-android-compiler:2.45'
     //Shimmer
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
     implementation 'io.github.ShawnLin013:number-picker:2.4.13'
     //Datos Biometricos
     implementation 'androidx.biometric:biometric:1.1.0'
+
 
 }
