Creacion del SearchView con el ReciclerView Local Y Firebase

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
     // Lottie Files
     implementation 'com.airbnb.android:lottie:5.2.0'
     //Firebase
@@ -91,6 +93,9 @@ dependencies {
     implementation 'io.github.ShawnLin013:number-picker:2.4.13'
     //Datos Biometricos
     implementation 'androidx.biometric:biometric:1.1.0'
+
+    //Realtime DataBase
+    implementation 'com.google.firebase:firebase-database:20.1.0'
 
 
 }
